tdf#90990 - listbox focus issue post dispose.

Change-Id: I091662fed0ebe121d023a1bed1eda79e6eb5a09e